--- a/arch/arm/configs/cyanogenmod_dalikt_defconfig
+++ b/arch/arm/configs/cyanogenmod_dalikt_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.63 Kernel Configuration
+# Linux/arm 3.0.66 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -456,7 +456,7 @@ CONFIG_KOR_MODEL_SHV_E120K=y
 # CONFIG_KOR_MODEL_SHV_E140K is not set
 # CONFIG_KOR_MODEL_SHV_E140L is not set
 # CONFIG_KOR_MODEL_SHV_E150S is not set
-# CONFIG_BT_MGMT is not set
+CONFIG_BT_MGMT=y
 # CONFIG_SAMSUNG_8X60_TABLET is not set
 # CONFIG_SAMSUNG_MEMORY_LAYOUT_ARRANGE is not set
 CONFIG_SEC_AUDIO_DEVICE=y
@@ -499,7 +499,7 @@ CONFIG_MSM_ETM=y
 CONFIG_MSM_GSBI9_UART=y
 CONFIG_MSM_SHOW_RESUME_IRQ=y
 # CONFIG_BT_MSM_PINTEST is not set
-# CONFIG_BT_BCM4330 is not set
+CONFIG_BT_BCM4330=y
 # CONFIG_MSM_FAKE_BATTERY is not set
 CONFIG_MSM_QDSP6_APR=y
 # CONFIG_MSM_AUDIO_QDSP6 is not set
@@ -1095,7 +1095,7 @@ CONFIG_BT_HCIUART_IBS=y
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
-CONFIG_MSM_BT_POWER=y
+# CONFIG_MSM_BT_POWER is not set
 
 #
 # Bluetooth device drivers
