--- a/drivers/bluetooth/Makefile
+++ b/drivers/bluetooth/Makefile
@@ -40,19 +40,7 @@ msm_bt_sleep-objs                       := bluesleep.o
 obj-$(CONFIG_MSM_BT_POWER)		+= bluetooth-power.o
 endif
 
-ifeq ($(CONFIG_KOR_MODEL_SHV_E120K),y)
-obj-$(CONFIG_BT_MSM_SLEEP)              += msm_bt_sleep.o
-msm_bt_sleep-objs                       := bluesleep.o
-obj-$(CONFIG_MSM_BT_POWER)		+= bluetooth-power.o
-endif
-
-ifeq ($(CONFIG_KOR_MODEL_SHV_E120S),y)
-obj-$(CONFIG_BT_MSM_SLEEP)              += msm_bt_sleep.o
-msm_bt_sleep-objs                       := bluesleep.o
-obj-$(CONFIG_MSM_BT_POWER)		+= bluetooth-power.o
-endif
-
-ifeq ($(CONFIG_KOR_MODEL_SHV_E120L),y)
+ifeq ($(CONFIG_JPN_MODEL_SC_01E),y)
 obj-$(CONFIG_BT_MSM_SLEEP)              += msm_bt_sleep.o
 msm_bt_sleep-objs                       := bluesleep.o
 obj-$(CONFIG_MSM_BT_POWER)		+= bluetooth-power.o
